# checkmate

./: .gitignore  .gitmodules  LICENSE  README.md
AE/: FIG6.md
config/gpt/: config.yaml  data.yaml  optimizer.yaml  trainer.yaml
config/gpt/model/: gpt2_117m.yaml  gpt3_6_7B.yaml  gpt3_large.yaml  gpt3_medium.yaml  gpt3_xl.yaml
docs/: dpdk_plugin.md  how_to_run.md  nccl_plugin.md  network_config.md
models/: README.md
models/checkfreq/: cf_checkpoint.py  cf_iterator.py  cf_manager.py  disk_bw.py
models/common/: measurement.py  trainer.py
models/mingpt/: README.md  char_dataset.py  gpt2_train_cfg.yaml  gpt3-2_7b.yaml  gpt3-6_7b.yaml  gpt3xl.yaml  model.py  random_gpt.yaml  run.py
models/roberta/: run.py
models/vision/: run.py  run_dpdk_baseline.sh  run_ib.sh
restore/: Cargo.toml  README.md  pyproject.toml
restore/.cargo/: config.toml
restore/python/: client.py  server.py
restore/src/: client.rs  lib.rs  server.rs
script/: arp.sh  build.sh  calc_txrx_frame.py  pthread_hook.c  run_opt_multinode.py  set_dpdk_env.sh  set_ib_env.sh  setup.sh  setup_nic.sh  setup_sinkhole.sh  setup_torch_113.sh
script/gpt_torch/: dataloader.py  gpt.py  main.py  train.py
script/playground/: allreduce_bench.py  calc_chunk.cc  calc_chunk.rs  compare_models.py  cuda_copy_net.cu  cuda_mem_bench.cu  cuda_mpi_example.cu  memcopy_measurement.py  plot_overhead.py  seqswap.c
storage/: Cargo.toml  README.md  pyproject.toml  tpa.cfg
storage/models/: run_gpt.py  run_llama.py  run_opt_bench.py  run_vision.py  test.py
storage/models/llama/: llama_config.py  llama_model.py  pipeline.py
storage/models/network/: __init__.py
storage/models/utils/: __init__.py  gradbucket_shard_optimizer.py  optimizer.py  optimizer_test.py
storage/src/: chunk_info.rs  grad_bucket.rs  lib.rs  worker.rs
storage/src/benches/: mem_bench.rs
switch/: README.md
switch/control/: ckpt.py  egress.py  ingress.py  l2switch.py  mcast.py  mirror_cfg.py  portmap.py
switch/p4/: build.sh  ckpt.p4  unclean.p4
switch/p4/common/: headers.p4
