[package]
name = "network"
version = "0.1.0"
edition = "2021"
default-run = "bench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "network"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "offset"
path = "src/bin/offset.rs"

[[bin]]
name = "switch"
path = "src/bin/switch_connect.rs"

[[bench]]
name = "memcpy"
harness = false
path = "src/benches/mem_bench.rs"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
libc = "0.2"
nix = "0.23.1"
pyo3 = { version = "0.23.1", features = ["auto-initialize"] }
libtcp = { path = "../third_party/libtpa/bindings/", features = ["standalone"] }
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
env_logger = "0.11.5"
log = "0.4.22"
clap = "3.2.25"
tcmalloc2 = "0.2.1"
crossbeam-utils = "*"
rayon = "1.10.0"
num_cpus = "1.16.0"
thread-priority = "1.2.0"
lazy_static = "1.5.0"

[features]
default = ["switch", "memcpy"]
switch = []
memcpy = []
